# crazyswarm2_iasrl_ca

crazyflie/config/: crazyflies.yaml
crazyflie_examples/: CMakeLists.txt
crazyflie_examples/crazyflie_examples/: detect_avoid.py  goal_commander.py  waypoint_gen.py
crazyflie_examples/launch/: commander_ca_launch.py  multiple_ca_launch.py
crazyflie_interfaces/: CMakeLists.txt
